update ArrayList and LinkedList